welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (c%10==b%10){
  ^